<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ac_setup_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/back_select"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="24sp"
            android:text="@string/setup_set"/>

        <!--跳转到音乐播放页面-->
        <ImageView
            android:id="@+id/ac_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/player"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="#8888"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#8888"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--账号设置-->
        <RelativeLayout
            android:id="@+id/ac_accountSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_zh"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:src="@drawable/username"/>
            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/size_listen_tesize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/iv_zh"
                android:padding="10dp"
                android:text="@string/setup_accountSet"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="12sp"
                android:textColor="#8888"
                android:layout_toLeftOf="@+id/iv_jt"
                android:text="@string/setup_notLoggedIn"/>

            <ImageView
                android:id="@+id/iv_jt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="10dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/list_enter"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_wt"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:src="@drawable/wifi"/>
            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/size_listen_tesize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_wt"
                android:padding="10dp"
                android:text="@string/setup_networking"/>

            <com.qf.kenlibrary.util.SettingUp
                android:id="@+id/swithbutton1"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_ts"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:src="@drawable/push"/>
            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/size_listen_tesize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/iv_ts"
                android:padding="10dp"
                android:text="@string/setup_push"/>

            <com.qf.kenlibrary.util.SettingUp
                android:id="@+id/swithbutton2"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>


        </RelativeLayout>

        <!--清除缓存-->
        <RelativeLayout
            android:id="@+id/ac_eliminate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_qc"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:src="@drawable/clearcache"/>
            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/size_listen_tesize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_qc"
                android:padding="10dp"
                android:text="@string/setup_eliminate"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="12sp"
                android:textColor="#8888"
                android:layout_toLeftOf="@+id/hc"
                android:text="@string/setup_byte"/>
            <ImageView
                android:id="@+id/hc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="10dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/list_enter"/>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="#8888"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#8888"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--关于魔王听书-->
        <RelativeLayout
            android:id="@+id/ac_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_gy"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:src="@drawable/about"/>
            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/size_listen_tesize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/iv_gy"
                android:padding="10dp"
                android:text="@string/setup_about"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="10dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/list_enter"/>
        </RelativeLayout>


        <!--检查更新-->
        <RelativeLayout
            android:id="@+id/ac_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_gx"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:src="@drawable/checkupdate"/>
            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/size_listen_tesize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_gx"
                android:padding="10dp"
                android:text="@string/setup_update"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="12sp"
                android:textColor="#8888"
                android:layout_toLeftOf="@+id/hc2"
                android:text="@string/setup_CurrentlyTheLatest"/>
            <ImageView
                android:id="@+id/hc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="10dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/list_enter"/>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#8888"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/ac_btn_log"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:textColor="#fff"
            android:layout_centerHorizontal="true"
            android:background="#8888"
            android:layout_margin="10dp"
            android:text="@string/setup_login"/>

    </RelativeLayout>

</LinearLayout>