<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mwkj.activity.MainActivity">

    <FrameLayout
        android:id="@+id/ac_fl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/ac_tab_ll"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:orientation="horizontal">

        <LinearLayout
            android:gravity="center"
            android:id="@+id/ac_tab_ll1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ac_tab_img1"
                android:src="@mipmap/tab_listening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/ac_tab_tv1"
                android:text="@string/head_tab_listening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:id="@+id/ac_tab_ll2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ac_tab_img2"
                android:src="@mipmap/tab_home_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/ac_tab_tv2"
                android:text="@string/head_tab_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:id="@+id/ac_tab_ll3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:src="@mipmap/tab_play"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:id="@+id/ac_tab_ll4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ac_tab_img4"
                android:src="@mipmap/tab_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/ac_tab_tv4"
                android:text="@string/head_tab_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:id="@+id/ac_tab_l5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ac_tab_img5"
                android:src="@mipmap/tab_community"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/ac_tab_tv5"
                android:text="@string/head_tab_community"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
